add cart activities

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Mamawaestate">
+        <activity android:name=".ShoppingCartActivity"></activity>
+        <activity android:name=".ProductDetailsActivity" />
+        <activity android:name=".CatalogActivity" />
         <activity android:name=".SignUpActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -38,9 +41,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".CheckOutActivity">
-
-        </activity>
+        <activity android:name=".CheckOutActivity" />
     </application>
 
 </manifest>
