--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -34,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.firebase:firebase-database:19.6.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -70,4 +72,19 @@ dependencies {
 
 //Times Formater
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+
+    //Add firebase SDK
+//Realtime Database for firebase data saving
+    implementation 'com.google.firebase:firebase-database:19.5.1'
+// FirebaseUI for Firebase Realtime Database
+    implementation 'com.google.firebase:firebase-core:18.0.2'
+//Realtime Database for firebase data saving
+    implementation 'com.google.firebase:firebase-database:19.6.0'
+// FirebaseUI for Firebase Realtime Database
+    implementation 'com.firebaseui:firebase-ui-database:6.3.0'
+    implementation 'com.google.android.material:material:1.2.1'
+//Firebase User Authentication
+
+    implementation 'com.google.firebase:firebase-auth:20.0.2'
+
 }
