--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,9 +45,13 @@ dependencies {
 
     implementation 'com.alexzh:circleimageview:1.1.2@aar'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.4.0'
+    implementation 'com.google.maps:google-maps-services:0.11.0'
+
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
