--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,15 @@
         android:theme="@style/Theme.Mamawaestate">
 
         <activity android:name=".ShoppingCartActivity"></activity>
-        <activity android:name=".ProductDetailsActivity" />
+        <activity android:name=".ProductDetailsFragment" />
         <activity android:name=".CatalogActivity" />
         <activity android:name=".MapActivity"></activity>
 
         <activity android:name=".SignUpActivity" />
+        <activity android:name=".LoginActivity" />
+
         <activity
-            android:name=".LoginActivity"
+            android:name=".SplashActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
